--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,21 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
+ = form_tag movies_path, :method => :get do
+   Include: 
+   - @all_ratings.each do |rating, value|
+     = rating
+     = check_box_tag "ratings[#{rating}]", 1, value 
+   = submit_tag 'Refresh', :id => "ratings_submit"
+
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th{:class => ("hilite" if params[:sort] == "title")}
+        = link_to "Movie Title", {:sort => "title", :filter => @filtered_ratings.to_s}, :id => "title_header"
       %th Rating
-      %th Release Date
+      %th{:class => ("hilite" if params[:sort] == "release_date")}
+        = link_to "Release Date", {:sort => "release_date", :filter => @filtered_ratings.to_s}, :id => "release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
